--- a/views/tests.ejs
+++ b/views/tests.ejs
@@ -3,104 +3,164 @@
 <html>
 
     <head>
-        <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
-        <meta charset="utf-8">
-        
-        <title>Places Search Box</title>
+        <title>Geolocation</title>
+        <meta charset="UTF-8">
+        <meta name="viewport"
+              content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
         <style>
-        /* Always set the map height explicitly to define the size of the div
-        * element that contains the map. */
-        #map {
-            height: 50%;
-            width: 40%;
-        }
-        /* Optional: Makes the sample page fill the window. */
-        html, body {
-            height: 100%;
-            margin: 0;
-            padding: 0;
-        }
-        #description {
-            font-family: Roboto;
-            font-size: 15px;
-            font-weight: 300;
-        }
+                /* Always set the map height explicitly to define the size of the div
+                * element that contains the map. */
+                #map {
+                    height: 50%;
+                    width: 80%;
+                    margin: auto;
+                }
+                /* Optional: Makes the sample page fill the window. */
+                html, body {
+                    height: 100%;
+                    margin: 0;
+                    padding: 0;
+                }
+                #description {
+                    font-family: Roboto;
+                    font-size: 15px;
+                    font-weight: 300;
+                }
 
-        #infowindow-content .title {
-            font-weight: bold;
-        }
+                #infowindow-content .title {
+                    font-weight: bold;
+                }
 
-        #infowindow-content {
-            display: none;
-        }
+                #infowindow-content {
+                    display: none;
+                }
 
-        #map #infowindow-content {
-            display: inline;
-        }
+                #map #infowindow-content {
+                    display: inline;
+                }
 
-        .pac-card {
-            margin: 10px 10px 0 0;
-            border-radius: 2px 0 0 2px;
-            box-sizing: border-box;
-            -moz-box-sizing: border-box;
-            outline: none;
-            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
-            background-color: #fff;
-            font-family: Roboto;
-        }
+                .pac-card {
+                    margin: 10px 10px 0 0;
+                    border-radius: 2px 0 0 2px;
+                    box-sizing: border-box;
+                    -moz-box-sizing: border-box;
+                    outline: none;
+                    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+                    background-color: #fff;
+                    font-family: Roboto;
+                }
 
-        #pac-container {
-            padding-bottom: 12px;
-            margin-right: 12px;
-        }
+                #pac-container {
+                    padding-bottom: 12px;
+                    margin-right: 12px;
+                }
 
-        .pac-controls {
-            display: inline-block;
-            padding: 5px 11px;
-        }
+                .pac-controls {
+                    display: inline-block;
+                    padding: 5px 11px;
+                }
 
-        .pac-controls label {
-            font-family: Roboto;
-            font-size: 13px;
-            font-weight: 300;
-        }
+                .pac-controls label {
+                    font-family: Roboto;
+                    font-size: 13px;
+                    font-weight: 300;
+                }
 
-        #pac-input {
-            background-color: #fff;
-            font-family: Roboto;
-            font-size: 15px;
-            font-weight: 300;
-            margin-left: 12px;
-            padding: 0 11px 0 13px;
-            text-overflow: ellipsis;
-            width: 400px;
-        }
+                #pac-input {
+                    background-color: #fff;
+                    font-family: Roboto;
+                    font-size: 15px;
+                    font-weight: 300;
+                    margin-left: 12px;
+                    padding: 0 11px 0 13px;
+                    text-overflow: ellipsis;
+                    width: 400px;
+                }
 
-        #pac-input:focus {
-            border-color: #4d90fe;
-        }
+                #pac-input:focus {
+                    border-color: #4d90fe;
+                }
 
-        #title {
-            color: #fff;
-            background-color: #4d90fe;
-            font-size: 25px;
-            font-weight: 500;
-            padding: 6px 12px;
-        }
+                #title {
+                    color: #fff;
+                    background-color: #4d90fe;
+                    font-size: 25px;
+                    font-weight: 500;
+                    padding: 6px 12px;
+                }
 
-        #target {
-            width: 345px;
-        }
-    </style>
+                #target {
+                    width: 345px;
+                }
+            </style>
 
-</head>
+    </head>
 
+    <body>
+     
+     <div style="width:80%; margin:auto">
 
-<body>
+        <p></p>
+        <h2>Criar quest</h2>
+        <p></p>
+
+        <form action='' method="post" encType="multipart/form-data">
+
+            <div class="form-group">
+                <label for="name">Nome da quest:</label>
+                <input type="text" class="form-control" name="name" id="name">
+            </div>
+
+            <div class="form-group">
+                <label for="clueText">Texto da dica:</label>
+                <textarea type="text" class="form-control" name="clueText" id="clueText" rows="4"></textarea>
+            </div>
+            
+            <p>Selecione no mapa o local</p>
+            <!--<div class="form-group">
+                <label for="latitude">Latitude:</label>
+                <input id="latitude" type="number" step="any" class="form-control" name="latitude">
+            </div>
+
+            <div class="form-group">
+                <label for="longitude">Longitude:</label>
+                <input id="longitude" type="number" step="any" class="form-control" name="longitude">
+            </div>-->
+            <div class="form-group">
+                <label for="north">Norte:</label>
+                <input id="north" type="number" step="any" class="form-control" name="north">
+            </div>
+
+            <div class="form-group">
+                <label for="south">Sul:</label>
+                <input id="south" type="number" step="any" class="form-control" name="south">
+            </div>
+
+            <div class="form-group">
+                <label for="east">Leste:</label>
+                <input id="east" type="number" step="any" class="form-control" name="east">
+            </div>
+
+            <div class="form-group">
+                <label for="west">Oeste:</label>
+                <input id="west" type="number" step="any" class="form-control" name="west">
+            </div>
+
+            <button id="saveBtn" type="submit" class="btn btn-primary">Registrar</button>
+        </form>
+        
+    </div>
+
+    <p></p>
     <input id="pac-input" class="controls" type="text" placeholder="Search Box">
-    
     <div id="map"></div>
+
 
     <script>
       // This example adds a search box to a map, using the Google Place Autocomplete
@@ -110,33 +170,53 @@
       // This example requires the Places library. Include the libraries=places
       // parameter when you first load the API. For example:
       // <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places">
-        
-
         function initAutocomplete() {
 
-            var rectangle, myMarker;
+            var rectangle, myMarker, bounds;
+            var north = document.getElementById('north');
+            var south = document.getElementById('south');
+            var east = document.getElementById('east');
+            var west = document.getElementById('west');
 
             var map = new google.maps.Map(document.getElementById('map'), {
-                center: {lat: -33.8688, lng: 151.2195},
+                center: {lat: -23.533773, lng: -46.625290},
                 zoom: 13,
             });
 
-
-
-            // Positionate the map at the user location and puts a merker on it
+            // Positionate the map at the user location and puts a rectangle/marker on it
             if (navigator.geolocation) {
                 navigator.geolocation.getCurrentPosition(function(position) {
                     var pos = {
                         lat: position.coords.latitude,
                         lng: position.coords.longitude
                     };
+                    bounds = {
+                        north: pos.lat + 0.005,
+                        south: pos.lat - 0.005,
+                        east: pos.lng + 0.005,
+                        west: pos.lng - 0.005,
+                    };
                     map.setCenter(pos);
 
-                    myMarker = new google.maps.Marker({
+                    rectangle = new google.maps.Rectangle({
+                        bounds: bounds,
+                        editable: true,
+                        draggable: true
+                    });
+                    rectangle.setMap(map);
+
+                    updateCoord(rectangle, north, south, east, west)
+
+                    // Add an event listener on the rectangle.
+                    rectangle.addListener('bounds_changed', function() {
+                        updateCoord(rectangle, north, south, east, west)
+                    });
+
+                    /*myMarker = new google.maps.Marker({
                         position: new google.maps.LatLng(pos.lat , pos.lng),
                         draggable: true
                     });
-                    myMarker.setMap(map);
+                    myMarker.setMap(map);*/
                 }, function() {
                     handleLocationError(true, infoWindow, map.getCenter());
                 });
@@ -148,8 +228,6 @@
                     'Error: Your browser doesn\'t support geolocation.');
                 infoWindow.open(map);
             }
-
-
 
             //search engine
             // Create the search box and link it to the UI element.
@@ -210,13 +288,42 @@
 
                     map.fitBounds(bounds);
                 });
+
+
+                center = map.getCenter();
+                rectangle.setMap(null);
+                bounds = {
+                    north: map.getCenter().lat() + 0.005,
+                    south: map.getCenter().lat() - 0.005,
+                    east: map.getCenter().lng() + 0.005,
+                    west: map.getCenter().lng() - 0.005,
+                };
+
+                rectangle = new google.maps.Rectangle({
+                    bounds: bounds,
+                    editable: true,
+                    draggable: true
+                });
+
+                updateCoord(rectangle, north, south, east, west)
+
+                rectangle.setMap(map);
             });
 
-
-
+            function updateCoord(rectangle, north, south, east, west) {
+                var ne = rectangle.getBounds().getNorthEast();
+                var sw = rectangle.getBounds().getSouthWest();
+                north.value = ne.lat();
+                south.value = sw.lat();
+                east.value = ne.lng();
+                west.value = sw.lng();rectangle.setMap(map);
+            }
+            
             //puts a marker on the place where it is double clicked
-            google.maps.event.addListener(map, 'dblclick', function(event) {
+            /*google.maps.event.addListener(map, 'dblclick', function(event) {
                 addMarker(event.latLng, map);
+                //latit.value = event.latLng.lat();
+                //longit.value = event.latLng.lng();
             });
 
             // Adds a marker to the map.
@@ -225,12 +332,15 @@
                 // from the array of alphabetical characters.
                 myMarker.setMap(null);
                 myMarker.position = location;
+
                 myMarker.setMap(map);
-            }
+            }   */
         }
+
     </script>
 
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBV4PaT-tpXCdeGAW4e0mF_WAUC5GAMmBI&libraries=places&callback=initAutocomplete"></script>
+    
+    </body>
 
-  </body>
 </html>
