--- a/views/gm/newAdventure.ejs
+++ b/views/gm/newAdventure.ejs
@@ -30,6 +30,18 @@
                 <input type="text" class="form-control" name="name" id="name">
             </div>
 
+            <div class="form-group">
+                <label for="start">Data e horário de início:</label>
+                <input type="datetime-local" id="start"
+                       name="start" value="2018-06-12T19:30">
+            </div>
+
+            <div class="form-group">
+                <label for="end">Data e horário de encerramento:</label>
+                <input type="datetime-local" id="end"
+                       name="end" value="2018-06-12T19:30">
+            </div>
+
             <button id="saveBtn" type="submit" class="btn btn-primary">Salvar</button>
         </form>
         
